--- a/src/compot/Mobile Version/Mobile/Mobile.module.css
+++ b/src/compot/Mobile Version/Mobile/Mobile.module.css
@@ -1,14 +1,28 @@
 .wrapper {
   display: flex;
-  width: 100vw;
+  border: 5px solid black;
+  width: 400px;
   height: 100vh;
   font-family: "Rubik", sans-serif;
   font-family: "Space Grotesk", sans-serif;
-}
+  border-radius: 15px;
 
+}
+.box {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  overflow-y: hidden; /*для вертикального*/
+  overflow-x: hidden; /*для горизонтального*/
+}
 .gradient {
-  height: 100%;
-  width: 30%;
+  height: 40%;
+  border-radius: 15px;
+  width: 400px;
+  position: absolute;
   background: linear-gradient(
     149deg,
     rgba(24, 187, 156, 1) 0%,
@@ -31,36 +45,11 @@
     background-position: 80% 0%;
   }
 }
-.form{
+.form {
   display: flex;
-  width: 70%;
+  width: 100%;
+  margin-top: 320px;
   /* height: 100%; */
   justify-content: center;
   align-items: center;
 }
-.mobile{
-  display: flex;
-  width: 130px;
-  height: 50px;
-  margin-right: 25px;
-  margin-top: 15px;
-  color: aliceblue;
-  background-color: rgb(82, 82, 229);
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  font-size: 20px;
-}
-.box{
-  height: 70px;
-  display: flex;
-  text-decoration: none;
-  justify-content: center;
-  align-items: center;
-}
-
-/* @media screen and (max-width: 992px) {
-  .wrapper{
-    flex-direction: column;
-  }
-} */
