--- a/src/App.css
+++ b/src/App.css
@@ -51,16 +51,68 @@
   border-radius: 5px;
   font-size: 20px;
 }
-.box{
-  height: 70px;
-  display: flex;
-  text-decoration: none;
-  justify-content: center;
-  align-items: center;
-}
+
 
 /* @media screen and (max-width: 992px) {
   .wrapper{
     flex-direction: column;
   }
 } */
+@media (max-width: 700px) {
+  .wrapper {
+    display: flex;
+    border: 5px solid black;
+    width: 400px;
+    height: 100vh;
+    font-family: "Rubik", sans-serif;
+    font-family: "Space Grotesk", sans-serif;
+    border-radius: 15px;
+  
+  }
+  .box {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    overflow-y: hidden; /*для вертикального*/
+    overflow-x: hidden; /*для горизонтального*/
+  }
+  .gradient {
+    height: 40%;
+    border-radius: 15px;
+    width: 400px;
+    position: absolute;
+    background: linear-gradient(
+      149deg,
+      rgba(24, 187, 156, 1) 0%,
+      rgba(106, 57, 175, 1) 42%,
+      rgba(187, 24, 148, 1) 72%,
+      rgba(115, 53, 134, 1) 100%
+    );
+    animation: gradient 10s infinite linear;
+    background-size: 400%;
+  }
+  
+  @keyframes gradient {
+    0% {
+      background-position: 80% 0%;
+    }
+    50% {
+      background-position: 20% 100%;
+    }
+    100% {
+      background-position: 80% 0%;
+    }
+  }
+  .form {
+    display: flex;
+    width: 100%;
+    margin-top: 420px;
+    /* height: 100%; */
+    justify-content: center;
+    align-items: center;
+  }
+  
+}
